--- a/src/styles/notification.less
+++ b/src/styles/notification.less
@@ -2,12 +2,17 @@
     position: relative;
     color: @color_info_primary;
     background: @color_info_secondary;
+    border-top: 1px solid @color_info_primary;
     padding: 24px 48px 24px 80px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
     text-align: left;
+
+    &:first-child {
+        border-top: 0px;
+    }
 
     .notification-body {
         flex: 1;
@@ -72,6 +77,7 @@
 
     &.success {
         color: @color_success_primary;
+        border-color: @color_success_primary;
         background: @color_success_secondary;
 
         .notification-action button {
@@ -86,6 +92,7 @@
 
     &.warning {
         color: @color_warning_primary;
+        border-color: @color_warning_primary;
         background: @color_warning_secondary;
         h2:before {
             .icomoon-warning;
@@ -103,6 +110,7 @@
 
     &.error {
         color: @color_error_primary;
+        border-color: @color_error_primary;
         background: @color_error_secondary;
         h2:before {
             .icomoon-error;
@@ -124,4 +132,44 @@
             }
         }
     }
+}
+
+.notifications-group {
+    position: relative;
+    text-transform: capitalize;
+    color: @color_info_primary;
+    padding: 12px 24px;
+    padding-left: 80px;
+    cursor: pointer;
+    border-bottom: 1px solid @color_divider;
+
+    &:before {
+        .icomoon-info;
+        position: absolute;
+        top: 5px;
+        left: 40px;
+        font-size: 32px !important;
+    }
+
+    &.error {
+        color: @color_error_primary;
+        &:before {
+            .icomoon-error;
+        }
+    }
+
+    &.warning {
+        color: @color_warning_primary;
+        &:before {
+            .icomoon-warning;
+        }
+    }
+
+    &.success {
+        color: @color_success_primary;
+        &:before {
+            // .icomoon-success;
+        }
+    }
+
 }
